- https://github.com/eclipse-syson/syson/issues/1277[#1277] [general-view] Add the `perform actions` compartment on `ActionUsage` and `ActionDefinition` graphical nodes in the _General View_ diagram.
- https://github.com/eclipse-syson/syson/issues/1287[#1287] [general-view] Reduce the initial width of the `Package` graphical node.

=== New features

- https://github.com/eclipse-syson/syson/issues/1237[#1237] [general-view] Add `ViewUsage` graphical node in the General View diagram.

== v2025.4.0

=== Shapes

- Add support for library publication

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/1079[#1079] [metamodel] Align metamodel to SysMLv2 2024-12 specification released on December 2024(see https://www.omg.org/spec/SysML/ for more details) and KerML 2024-12 specification released on December 2024(see https://www.omg.org/spec/KerML/ for more details).
Please download all your models/projects before upgrading to 2025.4.0.
The new concepts are:
* `CrossSubsetting` (inherits from `Subsetting`)
* `IndexExpression` (inherits from `OperatorExpression`)
The new operations are:
* `Usage#referencedTargetFeature()`
* `Type#supertypes(EBoolean)`
* `Type#removedRedefinedFeatures(Membership)`
* `Type#nonPrivateMemberships(Namespace, Type, EBoolean)`
* `Type#inheritableMemberships(Namespace, Type, EBoolean)`
* `Type#multiplicities()`
* `Namespace#membershipsOfVisibility(VisibilityKind, Namespace)`
* `Membership#allRedefinedFeatures()`
* `Feature#allRedefinedFeatures()`
* `Feature#asCartesianProduct()`
* `Feature#isCartesianProduct()`
* `Feature#isOwnedCrossFeature()`
* `Feature#ownedCrossFeature()`
The new references are:
* `CrossSubsetting#crossedFeature`
* `CrossSubsetting#crossingFeature`
* `Feature#crossFeature`
* `Feature#ownedCrossSubsetting`
* `Annotation#ownedAnnotatingElement`
* `AnnotatingElement#owningAnnotatingRelationship`
* `FlowConnectionDefinition#flowConnectionEnd`
The modifications are: